Final adjustments for revision plots

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -382,7 +382,7 @@
     "PLOT_D_MAX = 30\n",
     "\n",
     "no_deco = True\n",
-    "fig_size = (8, 4)\n",
+    "fig_size = (6, 3)\n",
     "\n",
     "chosen_calibration_param = 0.3\n",
     "simplify_angles = False\n",
@@ -409,7 +409,7 @@
     "#for estimator in [\"moving\"]: #[\"particle\"]:#, \"moving\"]:\n",
     "for estimator in [\"particle\"]:\n",
     "#for estimator in [\"histogram\", \"moving\", \"particle\"]:#, \"moving\"]:\n",
-    "    fig_cdf, axs_cdf = plt.subplots(1, 2)\n",
+    "    fig_cdf, axs_cdf = plt.subplots(1, 2, sharey=True)\n",
     "    fig_cdf.set_size_inches(*fig_size_cdf)\n",
     "    for i_app, appendix in enumerate(appendices):\n",
     "        \n",
@@ -479,10 +479,15 @@
     "            ax.set_title(f\" exp{appendix} {estimator}\".replace(\"_\", \"\\\\_\"))\n",
     "            fig.set_size_inches(*fig_size)\n",
     "\n",
+    "    lines = []; leg_labels = []\n",
+    "    line, = axs_cdf[1].plot([], [], color=\"C0\")\n",
+    "    lines.append(line); leg_labels.append(\"dataset \\nglass wall\")\n",
+    "    line, = axs_cdf[1].plot([], [], color=\"C1\")\n",
+    "    lines.append(line); leg_labels.append(\"dataset \\nwhiteboard\")\n",
+    "    \n",
     "    # generate random\n",
     "    d_random = np.random.choice(range(*D_RANGE), size=len(gt_distances))\n",
     "    a_random = np.random.choice(range(360), size=len(gt_angles))\n",
-    "    lines = []; leg_labels = []\n",
     "    axs_cdf[0].plot(sorted(np.abs(d_random-gt_distances)), np.linspace(0, 1, len(gt_distances)), color=color[\"random\"])\n",
     "    line, = axs_cdf[1].plot(sorted(np.abs(angle_error(a_random, gt_angles))), np.linspace(0, 1, len(gt_angles)), color=color[\"random\"])\n",
     "    lines.append(line); leg_labels.append(\"random\")\n",
@@ -494,11 +499,7 @@
     "    lines.append(line); leg_labels.append(\"fixed\")\n",
     "\n",
     "    axs_cdf[1].plot(sorted(np.abs(angle_error(a_fixed, gt_angles))), np.linspace(0, 1, len(gt_angles)), ls=\":\", color=color[\"fixed\"])\n",
-    "    line, = axs_cdf[1].plot([], [], color=\"C0\")\n",
-    "    lines.append(line); leg_labels.append(\"dataset glass wall\")\n",
-    "    line, = axs_cdf[1].plot([], [], color=\"C1\")\n",
-    "    lines.append(line); leg_labels.append(\"dataset whiteboard\")\n",
-    "    axs_cdf[1].legend(lines, leg_labels, title=\"used data\", loc=\"upper left\", bbox_to_anchor=[1.0, 0.5])\n",
+    "    axs_cdf[1].legend(lines, leg_labels, title=\"used data\", loc=\"upper left\", bbox_to_anchor=[1.0, 0.8])\n",
     "\n",
     "    axs_cdf[0].grid(True)\n",
     "    axs_cdf[1].grid(True)\n",
@@ -507,11 +508,11 @@
     "    axs_cdf[0].set_title(\"distance estimation\")\n",
     "    axs_cdf[1].set_title(\"angle estimation\")\n",
     "    axs_cdf[0].set_ylabel(\"cdf [-]\")\n",
-    "    axs_cdf[1].set_ylabel(\"cdf [-]\")\n",
+    "    #axs_cdf[1].set_ylabel(\"cdf [-]\")\n",
     "    axs_cdf[0].set_xlim(0, PLOT_D_MAX)\n",
     "    axs_cdf[1].set_xlim(0, 200)\n",
     "    fig_cdf.set_size_inches(*fig_size)\n",
-    "    fig_cdf.subplots_adjust(wspace=0.3)\n",
+    "    fig_cdf.subplots_adjust(wspace=0.1)\n",
     "    if beamform:\n",
     "        save_fig(fig_cdf, f\"plots/experiments/{exp_name}_{discretization.replace(' ','_')}_{estimator}_beamform_cdfs.pdf\")\n",
     "    else:\n",
@@ -531,7 +532,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -554,6 +555,10 @@
     "names = {\n",
     "    \"pyroom\": \" simulated\",\n",
     "    \"\": \"\"\n",
+    "}\n",
+    "rename = {\n",
+    "    \"stepper\": \"drone\",\n",
+    "    \"epuck\": \"e-puck\",\n",
     "}\n",
     "\n",
     "fig_hor, (ax_dist, ax_ang) = plt.subplots(2, 1, sharex=True)\n",
@@ -588,7 +593,8 @@
     "            d_errors = d_estimates - gt_distances_here\n",
     "            cdf_distances = np.sort(np.abs(d_errors))\n",
     "            y = np.linspace(0, 1, len(cdf_distances))\n",
-    "            axs_cdf[0].plot(cdf_distances, y, ls=linestyles[simulate], label=name+names[simulate], color=color[name])\n",
+    "            label=rename[name] if simulate == \"\" else None\n",
+    "            axs_cdf[0].plot(cdf_distances, y, ls=linestyles[simulate], label=label, color=color[name])\n",
     "            ax_dist.plot(gt_distances_here, d_errors, color=color[name], ls=linestyles[simulate])\n",
     "\n",
     "            a_estimates = get_estimates_here(matrix_angles, a_here)\n",
@@ -599,7 +605,8 @@
     "            \n",
     "            cdf_angles = np.sort(np.abs(a_errors))\n",
     "            y = np.linspace(0, 1, len(cdf_angles))\n",
-    "            axs_cdf[1].plot(cdf_angles, y, ls=linestyles[simulate], label=name+names[simulate], color=color[name])\n",
+    "            label=rename[name] if simulate == \"\" else None\n",
+    "            axs_cdf[1].plot(cdf_angles, y, ls=linestyles[simulate], label=label, color=color[name])\n",
     "\n",
     "            fig, ax = plot_matrix(d_here, matrix_distances, #xvalues=times, \n",
     "                                  gt_values=gt_distances_here,\n",
@@ -624,29 +631,35 @@
     "a_fixed = gt_angles[0] + 180\n",
     "axs_cdf[0].plot(sorted(np.abs(d_fixed-gt_distances_here)), np.linspace(0, 1, len(gt_distances_here)), ls=\":\", color=color[\"fixed\"], label=\"fixed\")\n",
     "axs_cdf[1].plot(sorted(np.abs(angle_error(a_fixed, gt_angles_here))), np.linspace(0, 1, len(gt_angles_here)), ls=\":\", color=color[\"fixed\"], label=\"fixed\")\n",
-    "axs_cdf[1].legend(title=\"used data\", loc=\"upper left\", bbox_to_anchor=[1.0, 0.75])\n",
+    "\n",
+    "#axs_cdf[1].legend(title=\"used data\", loc=\"upper left\", bbox_to_anchor=[1.0, 0.75])\n",
+    "axs_cdf[1].legend(title=\"used data\", loc=\"lower right\", framealpha=1.0)\n",
     "\n",
     "axs_cdf[0].grid(True)\n",
     "axs_cdf[1].grid(True)\n",
-    "axs_cdf[0].set_xlabel(\"absolute distance error [cm]\")\n",
-    "axs_cdf[1].set_xlabel(\"absolute angle error [deg]\")\n",
+    "axs_cdf[0].set_xlabel(\"absolute error [cm]\")\n",
+    "axs_cdf[1].set_xlabel(\"absolute error [deg]\")\n",
     "axs_cdf[0].set_title(\"distance estimation\")\n",
     "axs_cdf[1].set_title(\"angle estimation\")\n",
     "axs_cdf[0].set_ylabel(\"cdf [-]\")\n",
     "#axs_cdf[1].set_ylabel(\"cdf [-]\")\n",
     "axs_cdf[0].set_xlim(0, PLOT_D_MAX)\n",
     "axs_cdf[1].set_xlim(0, 200)\n",
-    "fig_cdf.set_size_inches(8, 4)\n",
+    "fig_cdf.set_size_inches(5, 4)\n",
     "#fig_cdf.subplots_adjust(wspace=0.3)\n",
     "\n",
-    "fig_hor.set_size_inches(4, 4)\n",
+    "fig_hor.set_size_inches(3, 4)\n",
+    "\n",
     "ax_ang.set_xlabel(\"distance [cm]\")\n",
     "#ax_dist.set_xlabel(\"distance [cm]\")\n",
     "ax_dist.set_title(\"error evolution\")\n",
-    "ax_ang.set_ylabel(\"angle error [deg]\", x=1.5)\n",
+    "\n",
+    "ax_ang.set_ylabel(\"error [deg]\")\n",
+    "ax_dist.set_ylabel(\"error [cm]\")\n",
+    "ax_ang.yaxis.set_label_coords(-0.23,0.5)\n",
+    "ax_dist.yaxis.set_label_coords(-0.23,0.5)\n",
     "ax_ang.grid()\n",
     "ax_dist.grid()\n",
-    "ax_dist.set_ylabel(\"distance error [cm]\")\n",
     "if beamform:\n",
     "    save_fig(fig_cdf, f\"plots/experiments/comparison_{estimator}_beamform_cdfs.pdf\")\n",
     "    save_fig(fig_hor, f\"plots/experiments/comparison_{estimator}_beamform.pdf\")\n",
@@ -888,7 +901,7 @@
     "    if i % 20 == 0:\n",
     "        print(f\"{i+1}/{n_timesteps}\")\n",
     "    res = wall_detection.listener_callback_offline(\n",
-    "        signals_f[i].T, freqs, positions_cm[i], yaws_deg[i], timestamp=times[i]*1e3\n",
+    "        signals_f[i], freqs, positions_cm[i], yaws_deg[i], timestamp=times[i]*1e3\n",
     "    )\n",
     "    #fig, ax = plt.subplots()\n",
     "    #ax.pcolorfast(wall_detection.calibration_data[0, :, :])\n",
@@ -913,7 +926,9 @@
     "    #angle_local = wall_detection.estimator.get_local_forward_angle()\n",
     "    #angles_forward.append(angle_local)\n",
     "        \n",
-    "    __, __, prob_moving_dist, prob_moving_angle = res\n",
+    "    prob_moving_dist = res[\"prob_dist_moving\"]\n",
+    "    prob_moving_angle = res[\"prob_angle_moving\"]\n",
+    "    #__, __, prob_moving_dist, prob_moving_angle = res\n",
     "        \n",
     "    results_matrix_moving[:, i] = prob_moving_dist\n",
     "    \n",
@@ -947,26 +962,6 @@
     "save_fig(fig, f\"plots/experiments/{exp_name}{appendix}_result.pdf\")\n",
     "#plt.plot(times[:n_timesteps], angles_forward)\n",
     "print(\"done\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.title(\"factor graph runtime\")\n",
-    "plt.plot(np.array(runtimes_fg) * 1e3)\n",
-    "plt.axhline(np.mean(runtimes_fg) * 1e3)\n",
-    "plt.xlabel(\"time index [-]\")\n",
-    "plt.ylabel(\"time [ms]\")\n",
-    "plt.figure()\n",
-    "plt.title(\"inference runtime\")\n",
-    "plt.plot(np.array(runtimes_inference) * 1e3)\n",
-    "plt.axhline(np.mean(runtimes_inference) * 1e3)\n",
-    "plt.xlabel(\"time index [-]\")\n",
-    "plt.ylabel(\"time [ms]\")"
    ]
   },
   {
