--- a/python/StepperAnalysis.ipynb
+++ b/python/StepperAnalysis.ipynb
@@ -578,7 +578,7 @@
     "colors = plt.get_cmap(\"viridis\", lut=len(plot_df.chosen_mics.unique()))\n",
     "\n",
     "fig, axs = plt.subplots(1, 2, sharey=True)\n",
-    "fig.set_size_inches(8, 4)\n",
+    "fig.set_size_inches(6, 2)\n",
     "\n",
     "for i, (algorithm, df_dis) in enumerate(plot_df.groupby(\"algorithm\", sort=False)):\n",
     "    boxplots = {}\n",
@@ -600,7 +600,11 @@
     "#ax_plot.boxplot(boxplots.values())\n",
     "#ax_plot.set_xticklabels(boxplots.keys(), rotation=45)\n",
     "\n",
-    "axs[i].legend(loc=\"upper left\", bbox_to_anchor=[1.0,1.0], title=\"used mics\", ncol=2)\n",
+    "\n",
+    "fig.subplots_adjust(wspace=0.1)\n",
+    "axs[1].legend(loc=\"upper left\", bbox_to_anchor=[1.0,1.0], title=\"used mics\", ncol=2)\n",
+    "handles, labels = axs[i].get_legend_handles_labels()\n",
+    "axs[1].legend(handles[::1], labels[::1],ncol=2,fontsize=10, title=\"used mics\", loc=\"lower left\", bbox_to_anchor=[1.0, -0.2])\n",
     "save_fig(fig, f\"plots/experiments/{exp_name}_{discretization.replace(' ', '_')}_mics_cdfs.pdf\")"
    ]
   },
